fixing sidebar on mobile

--- a/src/styles/componentStyles/componentStyles.scss
+++ b/src/styles/componentStyles/componentStyles.scss
@@ -134,7 +134,6 @@
 @media screen and (max-width: 400px) {
     .sidebar{
         margin-top: 53.69px;
-        position: absolute;
         overflow-y: scroll;
         opacity: 1;
         width: 100vw;
